--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "API_TEST",
                 "\"${ApiUrl}\"")
+        buildConfigField("String", "OpenWeatherApiToken", OpenWeatherApiToken)
         multiDexEnabled true
 
     }
@@ -80,7 +81,6 @@ dependencies {
     debugCompile leakCannary
     releaseCompile leakCannary
     testCompile leakCannary
-
     compile 'com.android.support:multidex:1.0.1'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
