--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 apply from: '../config/quality/quality.gradle'
 android {
     if (project.hasProperty('devBuild')) {
         aaptOptions.cruncherEnabled = false
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -29,7 +28,7 @@ android {
     defaultConfig {
         applicationId "com.mangu.personalcityhelper"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -57,10 +56,6 @@ configurations.all {
     }
 }
 
-retrolambda {
-    jvmArgs '-noverify'
-    incremental true
-}
 apply from: 'dependencies.gradle'
 dependencies {
     compile supportLibs
@@ -81,7 +76,7 @@ dependencies {
     debugCompile leakCannary
     releaseCompile leakCannary
     testCompile leakCannary
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
@@ -90,8 +85,8 @@ dependencies {
     compile 'com.github.smart-fun:XmlToJson:1.2.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.jsoup:jsoup:1.9.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
     provided 'org.glassfish:javax.annotation:10.0-b28'
-    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.0'
 }
