--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -22,7 +22,7 @@ dependencies {
     checkstyle 'com.puppycrawl.tools:checkstyle:7.1'
 }
 
-def qualityConfigDir = "$project.rootDir/config/quality";
+def qualityConfigDir = "$project.rootDir/config/quality"
 def reportsDir = "$project.buildDir/reports"
 
 check.dependsOn 'checkstyle', 'findbugs', 'pmd'
@@ -32,7 +32,7 @@ task checkstyle(type: Checkstyle, group: 'Verification', description: 'Runs code
     source 'src'
     include '**/*.java'
     exclude '**/utils/scheduler/**'
-    exclude '**/models/**'
+    exclude '**/model/**'
     reports {
         xml.enabled = true
         html.enabled = true
